--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@bufbuild/protobuf": "^1.0.0",
     "@bufbuild/protoc-gen-es": "^1.0.0",
     "@msgpack/msgpack": "^2.8.0",
-    "isomorphic-fetch": "^3.0.0"
+    "@types/node-gzip": "^1.1.0",
+    "isomorphic-fetch": "^3.0.0",
+    "node-gzip": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "^18.14.1",
