--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.14.1",
+    "prettier": "^2.8.6",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
