--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@bufbuild/protoc-gen-es": "^1.0.0",
     "@types/node-gzip": "^1.1.0",
     "isomorphic-fetch": "^3.0.0",
-    "node-gzip": "^1.1.2"
+    "node-gzip": "^1.1.2",
+    "msgpackr": "^1.8.5"
   },
   "devDependencies": {
     "@types/node": "^18.14.1",
