--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@bufbuild/buf": "^1.14.0-1",
     "@bufbuild/protobuf": "^1.0.0",
     "@bufbuild/protoc-gen-es": "^1.0.0",
+    "@datadog/sketches-js": "^2.1.0",
     "@types/node-gzip": "^1.1.0",
     "isomorphic-fetch": "^3.0.0",
     "node-gzip": "^1.1.2",
-    "msgpackr": "^1.8.5"
+    "msgpackr": "^1.8.5",
+    "protobufjs": "^6.11.3"
   },
   "devDependencies": {
     "@types/node": "^18.14.1",
